Добавил параграф  QA Engineer

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        <!--
     Тайтл отобржается как название закладки в барузере
     -->
+    <p> QA Engineer </p>
     <title>Елизавета</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon" sizes="any" />
     <link rel="stylesheet" href="./normalize.css" />
